--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,20 @@
     <string name="medical_services">MEDICAL</string>
     <string name="shopping_cart">CARD</string>
     <string name="account">ACCOUNT</string>
+
+    <string name="ruble">Р</string>
+    <string name="clearCard">CLEAR CARD</string>
+    <string name="clearOrders">CLEAR ORDERS</string>
+    <string name="checkout">CHECKOUT</string>
+    <string name="totalOrder">TOTAL:</string>
+    <string name="yourName">Your Name</string>
+    <string name="yourPhone">Your Phone</string>
+    <string name="submit">SUBMIT</string>
+    <string name="mainHeader">Pharmacy Alliance Pharm</string>
+    <string name="descriptionPharmacy">We care about your health</string>
+    <string name="salePropOne">Sale - 10 % </string>
+    <string name="salePropTwo">Sale - 15 % </string>
+    <string name="headerPropOne">Teraflex 60 pcs. capsules</string>
+    <string name="headerPropTwo">Artra 500 mg</string>
+    <string name="descriptionProposal">The promotion is valid when ordering from 8 to 10 am</string>
 </resources>
